Layout Bugfixes
* About floating adjustet for small resolutions
* gray to colo on hover over sponsor images adjustet

--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -33,7 +33,7 @@ article {
         float: left;
         text-align: center;
         width: 300px;
-        min-height: 350px;
+        min-height: 400px;
         margin: 0.5em;
         padding: 0.3em;
         p {
@@ -56,7 +56,6 @@ article {
         }
     }
     .sponsor-img {
-        height: 8em;
         margin: 1em;
         filter: gray;
         filter: grayscale(1);
@@ -64,17 +63,12 @@ article {
     }
     .sponsor-img-gold {
         height: 12em;
-        margin: 1em;
-        filter: gray;
-        filter: grayscale(1);
-        -webkit-filter: grayscale(1);
+    }
+    .sponsor-img-chall-plus {
+        height: 8em;
     }
     .sponsor-img-chall {
         height: 6em;
-        margin: 1em;
-        filter: gray;
-        filter: grayscale(1);
-        -webkit-filter: grayscale(1);
     }
     .sponsor-img:hover {
         filter: none;
